--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 -i https://pypi.org/simple
 asgiref==3.8.1; python_version >= '3.8'
 django==5.1; python_version >= '3.10'
+django-appconf==1.0.6; python_version >= '3.7'
+django-select2==8.2.1; python_version >= '3.8'
 psycopg2-binary==2.9.9; python_version >= '3.7'
 python-dotenv==1.0.1; python_version >= '3.8'
 sqlparse==0.5.1; python_version >= '3.8'
