--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,20 @@
 databases:
-  - name: django-spoiledpotato
+  - name: spoiledpotato-project
     plan: free
-    databaseName: django_spoiledpotato
+    databaseName: spoiledpotato_project
     user: django_spoiled_user
 
 services:
   - type: web
     plan: free
-    name: django-spoiledpotato
+    name: spoiledpotato-project
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python -m gunicorn spoiledpotato_django.asgi:application -k uvicorn.workers.UvicornWorker"
+    startCommand: "python -m gunicorn spoiledpotato_project.asgi:application -k uvicorn.workers.UvicornWorker"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: django-spoiledpotato
+          name: spoiledpotato_project
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
