--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     name: spoiledpotato-project
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python -m gunicorn spoiledpotato_project.asgi:application -k uvicorn.workers.UvicornWorker"
+    startCommand: "python -m gunicorn spoiledpotato_django.asgi:application -k uvicorn.workers.UvicornWorker"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
